@@ -1,110 +1,13 @@
-# 苍穹外卖 Java / Spring Boot 面试知识点（精简完善版）
+# Java 面试笔记（精简版）
 
-## 1. 项目架构
+> 答题思路：先给结论，再讲原理，最后联系项目场景。示例以苍穹外卖为背景。
 
-```text
-客户端
-  ↓
-Tomcat
-  ↓
-Filter
-  ↓
-DispatcherServlet
-  ↓
-Interceptor
-  ↓
-Controller
-  ↓
-AOP Proxy
-  ↓
-Service
-  ↓
-Mapper（MyBatis）
-  ↓
-MySQL / Redis / OSS
+## 一、Spring 面试题
 
-响应按相反方向返回
-```
+### 1. IOC 和 DI 是什么？
 
-- **Tomcat**：Web 服务器 + Servlet 容器，负责接收 HTTP 请求、管理 Servlet。
-- **Servlet**：Java Web 处理请求和响应的规范。
-- **DispatcherServlet**：Spring MVC 核心 Servlet，负责请求分发。
-- **Controller**：接收参数、调用 Service、返回结果。
-- **Service**：核心业务逻辑、事务边界。
-- **Mapper**：执行 SQL，访问数据库。
-- **Filter**：Servlet 层过滤请求。
-- **Interceptor**：Spring MVC 层拦截 Controller 请求。
-- **AOP**：增强 Spring Bean 方法。
-
-### Maven 多模块
-
-```text
-sky-take-out
-├── sky-common
-├── sky-pojo
-└── sky-server
-```
-
-- **sky-common**：常量、异常、工具类、公共配置。
-- **sky-pojo**：Entity、DTO、VO。
-- **sky-server**：Controller、Service、Mapper、配置、启动类。
-- **本质**：大项目拆成多个独立子模块，共用父工程统一管理依赖、版本、插件；模块之间可以互相引用，实现代码复用、职责拆分。\*\*
-
-> 结构形式：一个**父工程（pom 类型）** + 多个子 module（jar/pom）
-> 父工程本身不写业务代码，只做管理。
-
----
-
-## 2. Entity、DTO、VO
-
-### Entity
-
-- 对应数据库表。
-- 主要用于 Mapper / Service 与数据库之间的数据映射。
-
-```text
-MySQL ↔ Entity ↔ Mapper
-```
-
-### DTO
-
-**Data Transfer Object**
-
-- 接收前端传入的数据。
-- 只保留当前接口需要的字段。
-
-```text
-前端 → DTO → Controller
-```
-
-### VO
-
-**View Object**
-
-- 封装返回给前端的数据。
-- 避免返回密码、内部字段等敏感信息。
-
-```text
-Controller → VO → 前端
-```
-
-```text
-DTO：接收前端参数
-Entity：数据库映射
-VO：返回前端数据
-```
-
----
-
-## 3. Spring IOC 与 DI
-
-### IOC
-
-**Inversion of Control，控制反转**：对象创建和生命周期交给 Spring 容器管理，而不是业务代码手动 `new`。
-
-### DI
-
-**Dependency Injection，依赖注入**：Spring 自动把 Bean 注入需要它的对象。
+- **IOC（控制反转）**：对象的创建和管理交给 Spring，而不是业务代码自己 `new`。
+- **DI（依赖注入）**：Spring 将 Bean 注入另一个 Bean，例如把 `OrderMapper` 注入 `OrderServiceImpl`。
 
 ```java
 @Service
@@ -117,1290 +20,476 @@ public class OrderServiceImpl {
 }
 ```
 
-### 常见 Bean 注解
+推荐构造器注入：依赖明确、方便单测，也能避免部分循环依赖。
 
-- `@Component`：通用组件。
-- `@Service`：业务层。
-- `@Repository`：数据访问层。
-- `@Controller`：MVC Controller。
-- `@RestController`：Controller + `@ResponseBody`。
-- `@Configuration`：配置类。
-- `@Bean`：通过方法注册 Bean。
+### 2. 常用 Bean 注解与作用域
 
-### 高频点
+| 注解 | 作用 |
+| --- | --- |
+| `@Component` | 通用组件 |
+| `@Service` | 业务层 |
+| `@Repository` | 数据访问层 |
+| `@RestController` | 返回 JSON 的 Controller |
+| `@Configuration` + `@Bean` | 配置类或第三方对象注册 |
 
-- Spring Bean 默认作用域：**singleton**。
-- 单例不等于线程安全。
-- Controller / Service 不应保存请求级可变成员变量。
-- 推荐构造器注入。
+Bean 默认是 **singleton**。单例不等于线程安全，Controller/Service 不应保存当前用户、订单号等请求级可变成员变量。
 
----
-
-## 4. Spring Bean 生命周期
+### 3. Spring Bean 生命周期？
 
 ```text
-实例化
-  ↓
-属性注入
-  ↓
-Aware 回调
-  ↓
-BeanPostProcessor before
-  ↓
-@PostConstruct
-  ↓
-初始化方法
-  ↓
-BeanPostProcessor after
-  ↓
-Bean 可用
-  ↓
-@PreDestroy
-  ↓
-销毁
+实例化 → 属性注入 → Aware 回调 → BeanPostProcessor 前置
+→ 初始化（@PostConstruct / init-method）→ BeanPostProcessor 后置 → 可使用
+→ 容器关闭（@PreDestroy）
 ```
 
-- AOP 代理通常由 `BeanPostProcessor` 创建。
-- Bean 生命周期由 Spring 容器管理。
+`BeanPostProcessor` 可以在 Bean 初始化前后增强对象，AOP 代理等能力与它有关。
 
----
+### 4. `@Component` 和 `@Bean` 的区别？
 
-## 5. Filter、Interceptor、AOP
+- `@Component` 标在类上，通过组件扫描自动注册，适合自己编写的类。
+- `@Bean` 标在方法上，适合第三方类或需要自定义构造过程的对象。
 
-| 技术        | 所属       | 拦截对象        | 常见用途                   |
-| ----------- | ---------- | --------------- | -------------------------- |
-| Filter      | Servlet    | HTTP 请求       | 编码、CORS、请求包装       |
-| Interceptor | Spring MVC | Controller 请求 | JWT、登录、权限            |
-| AOP         | Spring     | Bean 方法       | 日志、事务、耗时、公共字段 |
+项目例子：`RedisConfiguration` 用 `@Bean` 注册定制过序列化器的 `RedisTemplate`。
 
-### 执行顺序
+### 5. Filter、Interceptor、AOP 如何区分？
 
 ```text
-Filter.before
-  ↓
-DispatcherServlet
-  ↓
-Interceptor.preHandle
-  ↓
-Controller
-  ↓
-AOP Before / Around
-  ↓
-Service / Mapper
-  ↓
-AOP After
-  ↓
-Controller 返回
-  ↓
-Interceptor.postHandle
-  ↓
-Interceptor.afterCompletion
-  ↓
-Filter.after
+HTTP 请求 → Filter → DispatcherServlet → Interceptor → Controller
+                                              ↓
+                                      Service / Mapper（可被 AOP 增强）
 ```
 
-### Filter
+| 机制 | 适合场景 |
+| --- | --- |
+| Filter | 编码、跨域、请求包装等 Servlet 级通用处理 |
+| Interceptor | 登录认证、权限校验等 MVC 请求处理 |
+| AOP | 日志、事务、公共字段填充等 Bean 方法横切逻辑 |
 
-核心：
+项目中 JWT 放在 Interceptor；`@AutoFill` 公共字段填充放在 AOP。
+
+### 6. AOP 核心概念与动态代理
+
+- **切面 Aspect**：横切逻辑集合，如 `AutoFillAspect`。
+- **切入点 Pointcut**：拦截哪些方法。
+- **通知 Advice**：拦截后做什么，常用 `@Before`、`@Around`。
+- **代理 Proxy**：Spring 生成的增强对象。
+
+有接口通常使用 JDK 动态代理，无接口通常使用 CGLIB。环绕通知必须执行 `proceed()`，否则目标方法不会运行。
 
 ```java
-chain.doFilter(request, response);
-```
-
-不调用就不会继续执行请求链。
-
-### Interceptor
-
-核心：
-
-```java
-boolean preHandle(...)
-```
-
-- `true`：放行。
-- `false`：拦截。
-
-生命周期：
-
-```text
-preHandle → Controller → postHandle → afterCompletion
-```
-
----
-
-## 6. AOP 核心概念
-
-- **Aspect**：切面，公共逻辑集合。
-- **Pointcut**：切入点，决定拦截哪些方法。
-- **Advice**：通知，决定何时执行增强逻辑。
-- **JoinPoint**：连接点，被增强的方法。
-- **Target**：目标对象。
-- **Proxy**：Spring 创建的代理对象。
-
-```text
-Pointcut：拦谁
-Advice：干什么
-Aspect：Pointcut + Advice
-```
-
-### 常见通知
-
-- `@Before`：方法执行前。
-- `@After`：方法结束后，不管是否异常。
-- `@AfterReturning`：正常返回后。
-- `@AfterThrowing`：异常后。
-- `@Around`：方法执行前后都可处理。
-
----
-
-## 7. `@Around` 环绕通知
-
-```java
-@Around("execution(* com.sky.service.impl.*.*(..))")
-public Object around(ProceedingJoinPoint joinPoint) throws Throwable {
-    long begin = System.currentTimeMillis();
-    Object result = joinPoint.proceed();
-    long cost = System.currentTimeMillis() - begin;
-    System.out.println("耗时：" + cost + "ms");
+@Around("execution(* com.sky.service..*(..))")
+public Object around(ProceedingJoinPoint pjp) throws Throwable {
+    long start = System.currentTimeMillis();
+    Object result = pjp.proceed();
+    log.info("耗时={}ms", System.currentTimeMillis() - start);
     return result;
 }
 ```
 
-- `joinPoint.proceed()`：执行原方法。
-- 不调用 `proceed()`：目标方法不会执行。
-- `return result`：继续返回原方法结果。
-- `ProceedingJoinPoint`：`@Around` 使用，可主动调用 `proceed()`。
-- `JoinPoint`：可获取方法、参数、目标对象，但不能主动执行目标方法。
+### 7. `@Transactional` 原理与失效场景？
 
----
+Spring 通过 AOP 代理，在方法前开启事务，正常结束提交，异常时回滚。
 
-## 8. 苍穹外卖 AOP：公共字段自动填充
+- 默认对 `RuntimeException`、`Error` 回滚；受检异常需指定 `rollbackFor = Exception.class`。
+- 同类内部 `this.xxx()` 调用没有经过代理，事务可能失效。
+- 异常被吞掉、方法不是 `public`、Bean 不归 Spring 管理，也会导致失效。
 
-典型字段：
+项目例子：新增订单需同时写订单、订单明细并清空购物车，任一步失败都应整体回滚。
 
-```text
-createTime
-updateTime
-createUser
-updateUser
-```
+### 8. 事务的 ACID 与隔离级别？
 
-实现：
+- **原子性**：要么都成功，要么都回滚。
+- **一致性**：事务前后数据满足约束。
+- **隔离性**：并发事务互不干扰。
+- **持久性**：提交后数据不会丢失。
 
-```text
-@AutoFill
-  ↓
-AutoFillAspect
-  ↓
-@Before
-  ↓
-获取方法参数
-  ↓
-反射调用 setter
-  ↓
-填充时间和操作人
-```
+隔离级别从低到高：读未提交、读已提交、可重复读、串行化。MySQL InnoDB 默认可重复读。
 
-```java
-@AutoFill(OperationType.INSERT)
-void insert(Employee employee);
-```
+### 9. Spring MVC 常用注解？
 
-涉及知识：
+- `@RequestBody`：接收 JSON 请求体。
+- `@PathVariable`：接收路径参数，如 `/order/{id}`。
+- `@RequestParam`：接收查询参数。
+- `@RestControllerAdvice` + `@ExceptionHandler`：统一异常响应。
+
+项目中 DTO 接收请求、Entity 映射数据库、VO 返回前端，避免直接暴露密码等字段。
+
+### 10. JWT + ThreadLocal 的登录流程？
 
 ```text
-自定义注解 + AOP + 反射 + ThreadLocal
+登录成功 → 签发 JWT → 请求头携带 Token → Interceptor 校验
+→ BaseContext(ThreadLocal) 保存用户 ID → Service/AOP 使用 ID
 ```
 
----
+- JWT 无状态，适合前后端分离和多实例部署；缺点是主动失效较复杂。
+- `ThreadLocal` 是线程副本，不是全局变量；线程池复用后必须 `remove()`，防止用户数据串线。
+- `401` 是未认证，`403` 是已认证但无权限。
 
-## 9. Spring AOP 底层原理
+### 11. MyBatis 与 PageHelper 要点？
 
-Spring AOP 主要使用**动态代理**。
-
-### JDK 动态代理
-
-- 基于接口。
-- 目标类实现接口。
-
-### CGLIB
-
-- 基于继承生成子类代理。
-- 不要求目标类实现接口。
-- `final` 类 / `final` 方法不能被正常继承增强。
-
-### AOP 失效：同类内部调用
-
-```java
-public void methodA() {
-    methodB();
-}
-```
-
-```text
-外部调用 → Proxy → Target
-内部调用 → this.methodB() → 绕过 Proxy
-```
-
-`@Transactional` 同样存在该问题。
-
----
-
-## 10. JWT 认证
-
-```text
-登录成功
-  ↓
-生成 JWT
-  ↓
-客户端保存
-  ↓
-请求头携带 JWT
-  ↓
-Interceptor 校验
-  ↓
-解析用户 ID
-  ↓
-ThreadLocal 保存
-  ↓
-Controller / Service / AOP 使用
-```
-
-### 特点
-
-- 自包含。
-- 无状态。
-- 适合前后端分离。
-- 多实例无需共享 Session。
-
-### 缺点
-
-- 签发后不容易主动失效。
-- 可结合短过期时间、刷新 Token、Redis 黑名单。
-
----
-
-## 11. ThreadLocal
-
-```text
-Interceptor
-  ↓
-BaseContext.setCurrentId(userId)
-  ↓
-Service / AOP
-  ↓
-BaseContext.getCurrentId()
-```
-
-- 每个线程保存独立变量。
-- 避免 userId 层层传参。
-- 线程池会复用线程，使用完应 `remove()`。
-- 异步线程不能直接依赖父线程 ThreadLocal。
-
----
-
-## 12. Spring MVC 常见注解
-
-- `@RestController`：REST Controller。
-- `@RequestMapping`：公共请求路径。
-- `@GetMapping`：GET。
-- `@PostMapping`：POST。
-- `@PutMapping`：PUT。
-- `@DeleteMapping`：DELETE。
-- `@RequestBody`：JSON → Java 对象。
-- `@PathVariable`：路径参数。
-- `@RequestParam`：Query 参数。
-- `@Validated` / `@Valid`：参数校验。
-
----
-
-## 13. 全局异常处理
-
-```java
-@RestControllerAdvice
-public class GlobalExceptionHandler {
-    @ExceptionHandler(BaseException.class)
-    public Result handle(BaseException e) {
-        return Result.error(e.getMessage());
-    }
-}
-```
-
-- 统一处理异常。
-- Controller 不重复写 `try-catch`。
-- 统一错误返回格式。
-
-HTTP 状态码：
-
-- `400`：参数错误。
-- `401`：未认证 / Token 无效。
-- `403`：已认证但无权限。
-- `404`：资源不存在。
-- `500`：服务器内部异常。
-
----
-
-## 14. Spring 事务
-
-```java
-@Transactional
-public void submitOrder() {
-}
-```
-
-### ACID
-
-- **A 原子性**：全部成功或全部失败。
-- **C 一致性**：事务前后数据满足约束。
-- **I 隔离性**：事务之间减少互相干扰。
-- **D 持久性**：提交后永久保存。
-
-### 默认回滚
-
-默认对 `RuntimeException` 和 `Error` 回滚。
-
-```java
-@Transactional(rollbackFor = Exception.class)
-```
-
-可覆盖受检异常。
-
-### 常见失效
-
-- 同类内部调用。
-- 方法不由 Spring 管理。
-- 异常被 `try-catch` 吃掉。
-- 异常类型不满足回滚规则。
-- 数据库引擎不支持事务。
-
----
-
-## 15. MyBatis
-
-- Java 方法与 SQL 映射。
-- 动态 SQL 适合组合查询和批量操作。
-
-常用动态标签：
-
-```text
-<if>
-<where>
-<set>
-<foreach>
-```
-
-### `#{}` 与 `${}`
-
-- `#{}`：PreparedStatement 参数绑定，可防 SQL 注入。
-- `${}`：字符串直接拼接，有 SQL 注入风险。
-
----
-
-## 16. PageHelper 分页
+- `#{}` 使用 PreparedStatement 参数绑定，可防 SQL 注入；`${}` 是字符串拼接，应谨慎使用。
+- PageHelper 必须在查询前调用：
 
 ```java
 PageHelper.startPage(page, pageSize);
-Page<Employee> result = employeeMapper.pageQuery(dto);
+Page<Orders> result = orderMapper.pageQuery(dto);
 ```
+
+### 12. Redis 缓存与一致性？
+
+常用 Cache Aside：**读缓存，未命中查数据库后回填；写数据库后删除缓存**。
+
+- 缓存穿透：缓存空值或布隆过滤器。
+- 缓存击穿：互斥锁、逻辑过期。
+- 缓存雪崩：随机过期时间、限流、Redis 高可用。
+
+项目中菜品/套餐列表使用缓存，修改后清理相关 Key。
+
+### 13. Redis 分布式锁如何安全实现？
 
 ```text
-startPage
-  ↓
-拦截后续查询
-  ↓
-自动添加 limit
-  ↓
-执行 count 查询
+SET lockKey uuid NX EX 30
+成功 → 执行业务；失败 → 返回“处理中”
+释放 → Lua：value 相同才 DEL
 ```
 
-`startPage()` 必须在查询前调用。
+不能“先 `setnx` 后 `expire`”，否则异常可能产生死锁；不能直接删除锁，否则可能误删锁过期后其他线程新获得的锁。
+
+项目中按用户 ID 锁定下单请求，防止双击重复创建订单。数据库唯一约束、条件更新仍是最终兜底。
+
+### 14. Kafka 与 RabbitMQ 在项目中如何使用？
+
+| 组件 | 项目场景 | 关键点 |
+| --- | --- | --- |
+| Kafka | 订单创建后的异步统计 | `order.created` 事件；消费者按订单 ID 去重 |
+| RabbitMQ | 15 分钟未支付订单取消 | TTL + 死信队列；按“ID + 待支付状态”条件更新 |
+
+订单事件在 `@TransactionalEventListener` 中、事务提交后投递，避免“数据库回滚但消息已发送”。生产环境还应使用 Outbox、重试、确认机制处理最终一致性。
+
+### 15. WebSocket 与定时任务？
+
+- WebSocket 是双向长连接，项目用于向管理端实时推送新订单提醒。
+- `@EnableScheduling` + `@Scheduled` 可执行定时任务。
+- 多实例下定时任务可能重复执行，需要分布式锁或调度平台；任务和消息消费者都应设计为幂等。
 
 ---
 
-## 17. MySQL 索引
+## 二、Java 基础面试题
 
-### 常见索引
+### 1. `==` 和 `equals()` 的区别？
 
-- 主键索引。
-- 唯一索引。
-- 普通索引。
-- 联合索引。
-
-### 联合索引
-
-遵循**最左前缀原则**。
-
-```text
-(a,b,c)
-```
-
-通常可有效支持：
-
-```text
-a
-a,b
-a,b,c
-```
-
-### 常见失效
-
-- 对索引列使用函数。
-- 隐式类型转换。
-- 跳过联合索引最左字段。
-- 前置模糊查询 `%xxx`。
-- 优化器判断全表扫描成本更低。
-
-### 缺点
-
-- 占空间。
-- 写操作需要维护索引。
-
----
-
-## 18. MySQL 事务隔离级别
-
-```text
-READ UNCOMMITTED
-READ COMMITTED
-REPEATABLE READ
-SERIALIZABLE
-```
-
-常见问题：
-
-- 脏读。
-- 不可重复读。
-- 幻读。
-
-MySQL InnoDB 默认：`REPEATABLE READ`。
-
----
-
-## 19. Redis
-
-用途：
-
-- 热点数据缓存。
-- 验证码。
-- Token 黑名单。
-- 分布式锁。
-- 计数器。
-- 排行榜。
-
-### Spring Cache
-
-- `@Cacheable`：有缓存直接返回，没有则执行并写缓存。
-- `@CacheEvict`：数据修改后删除缓存。
-
-### 常见读写策略
-
-```text
-读：Redis → 未命中 → MySQL → 写 Redis
-写：更新 MySQL → 删除 Redis
-```
-
----
-
-## 20. Redis 三大缓存问题
-
-### 缓存穿透
-
-查询数据库根本不存在的数据。
-
-解决：
-
-- 缓存空值。
-- Bloom Filter。
-
-### 缓存击穿
-
-热点 Key 过期，大量请求同时访问数据库。
-
-解决：
-
-- 互斥锁。
-- 逻辑过期。
-- 热点 Key 不过期。
-
-### 缓存雪崩
-
-大量 Key 同时过期或 Redis 整体不可用。
-
-解决：
-
-- 过期时间加随机值。
-- Redis 高可用。
-- 限流 / 降级。
-
----
-
-## 21. Redis 持久化
-
-### RDB
-
-- 定期快照。
-- 恢复快。
-- 可能丢失最近一段数据。
-
-### AOF
-
-- 记录写命令。
-- 数据更完整。
-- 文件通常更大。
-
----
-
-## 22. WebSocket
-
-```text
-HTTP：客户端请求 → 服务端响应
-WebSocket：客户端 ↔ 服务端长连接
-```
-
-苍穹外卖：
-
-```text
-用户下单 → 服务端 → WebSocket → 管理端实时收到新订单提醒
-```
-
-- 服务端可主动推送。
-- 实时性高。
-- 减少轮询。
-
----
-
-## 23. 定时任务
-
-Spring：
-
-```text
-@EnableScheduling
-@Scheduled
-```
-
-苍穹外卖：
-
-- 超时未支付订单自动取消。
-- 派送订单定时完成。
-
-高频点：
-
-- 定时任务要保证幂等。
-- 多实例部署可能重复执行。
-- 可使用分布式锁或调度平台。
-
----
-
-## 24. 幂等性
-
-同一个业务请求执行多次，最终结果与执行一次一致。
-
-典型场景：
-
-- 重复提交订单。
-- 支付回调重复通知。
-- MQ 消息重复消费。
-- 定时任务重复执行。
-
-常见实现：
-
-- 唯一索引。
-- Token。
-- Redis `SETNX`。
-- 状态机。
-- 业务唯一号。
-
----
-
-## 25. 乐观锁与悲观锁
-
-### 乐观锁
-
-认为冲突较少。
-
-常见：
-
-- version 字段。
-- CAS。
-- 条件 UPDATE。
-
-库存示例：
-
-```sql
-update dish
-set stock = stock - 1
-where id = ? and stock > 0;
-```
-
-### 悲观锁
-
-认为冲突较多，先加锁再操作。
-
-```sql
-select ... for update;
-```
-
----
-
-## 26. 防止超卖
-
-```sql
-update product
-set stock = stock - 1
-where id = ? and stock > 0;
-```
-
-判断影响行数：
-
-```text
-1 → 成功
-0 → 库存不足
-```
-
-高并发可进一步使用：
-
-- Redis + Lua。
-- 消息队列削峰。
-- 乐观锁。
-- 分布式锁。
-
----
-
-## 27. Java 集合高频
-
-### ArrayList
-
-- 动态数组。
-- 随机查询快。
-- 中间插入删除成本较高。
-- 非线程安全。
-
-### LinkedList
-
-- 双向链表。
-- 随机访问慢。
-- 首尾插入删除方便。
-
-### HashMap
-
-- JDK 8：数组 + 链表 + 红黑树。
-- Key 可为 `null`。
-- 非线程安全。
-
-### ConcurrentHashMap
-
-- 线程安全。
-- JDK 8 主要使用 CAS + synchronized 控制并发。
-
-### HashMap 高频
-
-- 容量通常为 2 的幂，便于 `hash & (length - 1)` 定位。
-- `equals()` 相等的对象应保证 `hashCode()` 相同。
-
----
-
-## 28. Java 线程与线程池
-
-### 线程池优点
-
-- 避免频繁创建销毁线程。
-- 控制线程数量。
-- 提高资源利用率。
-
-### ThreadPoolExecutor 核心参数
-
-- corePoolSize。
-- maximumPoolSize。
-- keepAliveTime。
-- workQueue。
-- threadFactory。
-- rejectedExecutionHandler。
-
-### 执行顺序
-
-```text
-核心线程未满 → 创建核心线程
-核心线程满 → 进入队列
-队列满 → 创建非核心线程
-达到最大线程数 → 拒绝策略
-```
-
----
-
-## 29. synchronized 与 volatile
-
-### synchronized
-
-- 保证互斥。
-- 保证可见性。
-- 可修饰方法 / 代码块。
-
-### volatile
-
-- 保证可见性。
-- 禁止部分指令重排序。
-- 不保证复合操作原子性。
-
-`count++` 不是原子操作。
-
----
-
-## 30. JVM 内存结构
-
-```text
-线程共享：Heap、Method Area / Metaspace
-线程私有：Java Stack、Program Counter、Native Method Stack
-```
-
-- **Heap**：对象实例，GC 主要区域。
-- **Stack**：方法调用栈帧、局部变量、操作数栈等。
-
-### GC
-
-主流 JVM 使用**可达性分析**判断对象是否存活。
-
-常见 GC Roots：
-
-- 栈中的引用。
-- 静态变量引用。
-- JNI 引用。
-
----
-
-## 31. String 高频
-
-### `==`
-
-- 基本类型：比较值。
-- 引用类型：比较引用地址。
-
-### `equals()`
-
-String 重写了 `equals()`，比较字符串内容。
-
-### String 不可变优点
-
-- 安全。
-- 可缓存 hashCode。
-- 适合字符串常量池。
-- 更容易保证线程安全。
-
----
-
-## 32. `final`、`finally`、`finalize`
-
-- `final`：修饰变量、方法、类。
-- `finally`：异常处理中的最终执行块。
-- `finalize`：旧版对象回收回调机制，已不推荐。
-
----
-
-## 33. Spring Boot
-
-核心作用：
-
-- 自动配置。
-- Starter 依赖管理。
-- 内嵌 Tomcat。
-- 简化 Spring 项目搭建。
-
-### `@SpringBootApplication`
-
-组合：
-
-```text
-@SpringBootConfiguration
-@EnableAutoConfiguration
-@ComponentScan
-```
-
-### 自动配置
-
-```text
-classpath 依赖
-+
-配置文件
-+
-条件注解
-→ 自动注册 Bean
-```
-
-常见条件注解：
-
-- `@ConditionalOnClass`
-- `@ConditionalOnMissingBean`
-- `@ConditionalOnProperty`
-
----
-
-## 34. Spring MVC 参数转换
+- 基本类型的 `==` 比较值；引用类型的 `==` 比较是否同一对象。
+- `equals()` 默认等同于 `==`，许多类（如 `String`）重写后比较内容。
 
 ```java
-@PostMapping("/employee")
-public Result save(@RequestBody EmployeeDTO dto) {
+new String("a").equals("a"); // true：内容相同
+new String("a") == "a";      // false：不是同一对象
+```
+
+### 2. String 为什么不可变？StringBuilder 和 StringBuffer 怎么选？
+
+String 不可变，便于字符串常量池复用、缓存 hash 值和保证线程安全，也更适合做 HashMap Key。
+
+- 少量拼接：`String`。
+- 单线程大量拼接：`StringBuilder`（快）。
+- 多线程共享拼接：`StringBuffer`（方法同步，较慢）。
+
+### 3. `final`、`finally`、`finalize`？
+
+- `final`：变量不可重新赋值、方法不可重写、类不可继承。
+- `finally`：异常处理后的必执行代码块（JVM 退出等极端情况除外）。
+- `finalize`：已废弃，不应依赖它释放资源。
+
+### 4. `try-catch-finally` 中 return 的注意点？
+
+`finally` 中不要写 `return`：它会覆盖 `try/catch` 的返回值或异常。资源应使用 try-with-resources 自动关闭。
+
+```java
+try (InputStream in = ...) {
+    // 使用资源
 }
 ```
 
-```text
-HTTP JSON
-  ↓
-HttpMessageConverter
-  ↓
-Jackson
-  ↓
-EmployeeDTO
-```
+### 5. 异常体系如何划分？
 
-返回对象时反向序列化成 JSON。
+`Throwable` 分为 `Error` 与 `Exception`；Exception 又分受检异常和运行时异常。
 
----
+- 受检异常：必须捕获或声明抛出，如 `IOException`。
+- 运行时异常：通常表示编程错误，如 `NullPointerException`。
+- 业务异常：项目中继承 `BaseException`，交给全局异常处理器统一返回。
 
-# 项目提升技术
+### 6. 接口和抽象类的区别？
 
-## 35. Spring Security【高优先级】
+- 抽象类用于“is-a”共性实现，可有成员变量、构造器和普通方法，单继承。
+- 接口用于能力约束，可多实现；Java 8 起可有 default/static 方法。
 
-用途：
+优先面向接口编程：Service 定义接口，Impl 负责实现，便于替换和测试。
 
-- 登录认证。
-- 权限控制。
-- 角色管理。
-- 方法级鉴权。
+### 7. 重载与重写？
+
+- **重载**：同一类方法名相同、参数列表不同，编译期决定。
+- **重写**：子类改写父类方法，方法签名相同，运行期动态绑定。
+
+重写不能缩小访问权限，不能抛出更宽泛的受检异常。
+
+### 8. Java 是值传递还是引用传递？
+
+Java **只有值传递**。对象变量传递的是“对象引用的副本”，所以可通过副本修改对象内容，但不能让调用方的引用改指向新对象。
+
+### 9. 深拷贝与浅拷贝？
+
+- 浅拷贝：复制对象本身，内部引用仍共享。
+- 深拷贝：内部引用对象也复制。
+
+DTO/VO 转换时常用 `BeanUtils.copyProperties`，属于字段复制；嵌套集合或对象仍需按业务显式处理。
+
+### 10. `Optional` 应如何使用？
+
+适合表达“可能不存在”的返回值，避免层层空判断；不建议作为实体字段或方法入参。
 
 ```java
-@PreAuthorize("hasRole('ADMIN')")
-```
-
-### 与 Interceptor 区别
-
-- Interceptor：MVC 通用拦截机制。
-- Spring Security：完整安全框架，包含认证、授权、过滤器链、安全上下文。
-
----
-
-## 36. Kafka【高优先级】
-
-适合：
-
-```text
-用户下单
-  ↓
-订单核心逻辑
-  ↓
-Kafka
-  ├── 消息通知
-  ├── 运营统计
-  ├── 优惠券处理
-  └── 其他非核心业务
-```
-
-### 作用
-
-- 异步。
-- 解耦。
-- 削峰。
-- 消息持久化。
-
-### 高频概念
-
-- Producer。
-- Broker。
-- Consumer。
-- Topic。
-- Partition。
-- Consumer Group。
-- Offset。
-
-### 高频问题
-
-- 消息丢失。
-- 重复消费。
-- 顺序消息。
-- 消息积压。
-
-重复消费需要业务幂等：
-
-- 唯一业务 ID。
-- Redis 去重。
-- 数据库唯一索引。
-
----
-
-## 37. RabbitMQ【与 Kafka 二选一】
-
-更适合业务消息和延迟消息。
-
-苍穹外卖可将：
-
-```text
-Spring Task 扫描超时订单
-```
-
-升级为：
-
-```text
-下单 → 延迟消息 → 15 分钟后消费 → 未支付则取消
-```
-
-减少周期性数据库扫描。
-
----
-
-## 38. Spring AI【项目亮点】
-
-### AI 智能客服
-
-```text
-用户问题 → Spring AI → 大模型 → 回答菜品、配送、订单问题
-```
-
-### RAG 菜单问答
-
-```text
-菜品 / 套餐资料
-  ↓
-Embedding
-  ↓
-向量数据库
-  ↓
-检索相关内容
-  ↓
-LLM 生成回答
-```
-
-### AI 运营分析
-
-输入：
-
-```text
-订单量、销售额、热销菜品、退款情况
-```
-
-输出：
-
-```text
-经营总结、异常分析、运营建议
-```
-
-### 核心概念
-
-- Prompt。
-- LLM。
-- Embedding。
-- Vector Database。
-- RAG。
-- Tool Calling。
-- Streaming。
-
----
-
-## 39. Redis 分布式锁【高优先级】
-
-适合：
-
-- 防重复下单。
-- 并发修改同一资源。
-- 多实例定时任务防重复执行。
-
-推荐使用 **Redisson**。
-
-需要理解：
-
-- 锁过期。
-- 自动续期。
-- 锁误删。
-- 可重入。
-
----
-
-## 40. Elasticsearch【中优先级】
-
-适合：
-
-- 菜品搜索。
-- 商家搜索。
-- 关键词全文检索。
-
-核心概念：
-
-- Index。
-- Document。
-- Mapping。
-- Inverted Index。
-- Analyzer。
-
----
-
-## 41. Docker【高优先级】
-
-容器化：
-
-```text
-Spring Boot
-MySQL
-Redis
-Kafka
-```
-
-核心：
-
-```text
-Dockerfile
-docker-compose.yml
-```
-
-作用：
-
-- 环境一致。
-- 快速部署。
-- 方便项目演示。
-
----
-
-## 42. Nginx【高优先级】
-
-用途：
-
-- 反向代理。
-- 静态资源部署。
-- HTTPS。
-- 负载均衡。
-
-```text
-客户端 → Nginx → Spring Boot
-```
-
-多实例：
-
-```text
-             → Spring Boot 8081
-Nginx  →
-             → Spring Boot 8082
+String name = Optional.ofNullable(user)
+        .map(User::getName).orElse("游客");
 ```
 
 ---
 
-## 43. Spring Boot Actuator【中优先级】
+## 三、Java 集合面试题
 
-提供：
+### 1. List、Set、Map 怎么选？
 
-- 健康检查。
-- Metrics。
-- JVM 信息。
-- Bean 信息。
+| 接口 | 特点 | 常见实现 |
+| --- | --- | --- |
+| List | 有序、可重复 | ArrayList、LinkedList |
+| Set | 不可重复 | HashSet、TreeSet |
+| Map | Key-Value，Key 不重复 | HashMap、ConcurrentHashMap |
 
-可结合：
+### 2. ArrayList 和 LinkedList？
+
+- ArrayList 底层动态数组：按下标查询快，尾部追加快，中间插入/删除需要搬移元素。
+- LinkedList 底层双向链表：已定位节点后插删快，但按下标查询需遍历，且节点额外占内存。
+
+大多数业务场景选择 ArrayList；不要因“链表插入快”就盲目选 LinkedList。
+
+### 3. HashMap 原理？
+
+JDK 8 的 HashMap 是 **数组 + 链表/红黑树**。
 
 ```text
-Prometheus + Grafana
+hash(key) → 定位数组桶 → equals 比较 Key → 覆盖或新增
 ```
 
-进行监控。
+- 链表较长且数组容量达到条件后会树化，降低极端冲突查询成本。
+- Key 必须正确重写 `hashCode()` 和 `equals()`；两对象 `equals` 为 true，hashCode 必须相同。
+- HashMap 线程不安全；并发使用 `ConcurrentHashMap`。
+
+### 4. HashMap 为什么容量常为 2 的幂？
+
+通过 `(n - 1) & hash` 快速定位桶。容量为 2 的幂可让低位 hash 更均匀参与计算，减少冲突。
+
+### 5. HashSet 为什么能去重？
+
+HashSet 底层由 HashMap 实现，元素作为 Map 的 Key。先比较 hashCode 定位桶，再用 equals 判断是否重复。
+
+### 6. ConcurrentHashMap 如何保证并发？
+
+JDK 8 主要使用 CAS + `synchronized` 锁住单个桶，而非整张表；读操作大多无需加锁，并发度高于 Hashtable。
+
+它不允许 null Key/Value，因为并发环境下无法区分“Key 不存在”还是“Value 为 null”。
+
+### 7. fail-fast 与 fail-safe？
+
+- fail-fast：遍历时集合结构被修改，快速抛 `ConcurrentModificationException`，如 ArrayList 迭代器。
+- fail-safe：遍历副本或弱一致性数据，不一定抛异常，如 CopyOnWriteArrayList、ConcurrentHashMap。
+
+遍历时删除元素应使用 `Iterator.remove()`，或使用并发集合。
+
+### 8. Collections 与 Stream 的使用建议？
+
+Stream 适合转换、过滤、聚合；避免在 Stream 内做复杂 IO、修改外部共享变量或嵌套过深。
+
+```java
+List<String> names = orders.stream()
+        .filter(o -> o.getStatus().equals(Orders.COMPLETED))
+        .map(Orders::getNumber)
+        .collect(Collectors.toList());
+```
 
 ---
 
-## 44. 接口限流【中优先级】
+## 四、Java 并发编程面试题
 
-常见实现：
+### 1. 进程、线程、协程？
 
-- Redis + Lua。
-- Bucket4j。
-- Sentinel。
-- Nginx `limit_req`。
+- 进程是资源分配单位，进程间内存隔离。
+- 线程是 CPU 调度单位，同一进程线程共享堆内存。
+- 协程是用户态更轻量的执行单元，Java 21 虚拟线程可用于高并发阻塞任务。
 
-算法：
+### 2. 并发三大问题？
 
-- 固定窗口。
-- 滑动窗口。
-- 令牌桶。
-- 漏桶。
+- **原子性**：操作不可被分割。
+- **可见性**：一个线程修改对其他线程立即可见。
+- **有序性**：指令重排可能改变观察顺序。
+
+### 3. `synchronized` 和 `volatile` 的区别？
+
+| 关键字 | 能解决的问题 |
+| --- | --- |
+| `synchronized` | 原子性、可见性、有序性；可重入互斥锁 |
+| `volatile` | 可见性、有序性；不保证复合操作原子性 |
+
+```java
+volatile boolean running = true; // 适合开关
+count++; // 不是原子操作，不能仅靠 volatile
+```
+
+### 4. `synchronized` 锁在哪里？
+
+- 普通同步方法：当前实例对象。
+- 静态同步方法：Class 对象。
+- 同步代码块：`synchronized(lock)` 指定对象。
+
+锁应尽量细粒度，不要把网络请求、慢 SQL 放在大锁中。
+
+### 5. CAS 是什么？有什么问题？
+
+CAS（比较并交换）是“期望值相同才更新”的无锁操作，AtomicInteger 等原子类基于它实现。
+
+问题：ABA、长时间自旋开销、一次只能保证一个变量原子更新。复杂状态可使用锁或 AtomicReference。
+
+### 6. `wait()`、`notify()`、`sleep()` 区别？
+
+- `wait/notify` 必须在 synchronized 内使用，`wait` 会释放锁。
+- `sleep` 是 Thread 方法，不释放锁，只让当前线程暂停。
+- 更推荐使用 `CountDownLatch`、`Semaphore`、`BlockingQueue` 等并发工具类。
+
+### 7. 线程池为什么重要？
+
+复用线程、控制并发数、降低频繁创建线程开销，并提供队列、拒绝策略和监控点。
+
+```text
+核心线程 → 工作队列 → 最大线程 → 拒绝策略
+```
+
+核心参数：`corePoolSize`、`maximumPoolSize`、`keepAliveTime`、`workQueue`、`threadFactory`、`handler`。
+
+不建议直接用 Executors：其默认队列/最大线程数可能导致内存溢出或线程暴涨。应显式构造 `ThreadPoolExecutor`。
+
+### 8. 常见拒绝策略？
+
+- AbortPolicy：抛异常，默认策略。
+- CallerRunsPolicy：调用线程执行任务，形成反压。
+- DiscardPolicy：静默丢弃。
+- DiscardOldestPolicy：丢弃队列最旧任务。
+
+订单、支付等关键任务不能静默丢弃；应记录日志、重试或转入可靠消息队列。
+
+### 9. `ThreadLocal` 原理与内存泄漏？
+
+每个 Thread 有一个 ThreadLocalMap，Key 是弱引用、Value 是强引用。在线程池中，Key 被回收后 Value 仍可能随线程长期存在。
+
+```java
+try {
+    BaseContext.setCurrentId(userId);
+    // 当前请求业务
+} finally {
+    BaseContext.removeCurrentId();
+}
+```
+
+项目 JWT 拦截器存入当前用户 ID 后，应在请求完成时清理。
+
+### 10. 死锁产生条件与排查？
+
+条件：互斥、占有且等待、不可抢占、循环等待。避免方式：统一加锁顺序、缩小锁范围、使用 `tryLock` 超时。
+
+排查：`jstack <pid>` 查看线程栈和 `Found one Java-level deadlock`。
+
+### 11. 幂等与并发控制怎么做？
+
+| 场景 | 推荐方案 |
+| --- | --- |
+| 用户重复下单 | Redis 分布式锁、业务 Token |
+| 库存扣减 | 条件更新/乐观锁 |
+| 支付回调、MQ 重复消费 | 唯一业务号、状态机、去重表/缓存 |
+| 多实例定时任务 | 分布式锁 |
 
 ---
 
-## 45. OSS / MinIO【中优先级】
+## 五、Java 虚拟机面试题
 
-用途：
+### 1. JVM 运行时内存区域？
 
-- 菜品图片。
-- 用户头像。
-- 文件上传。
+| 区域 | 线程共享 | 存放内容 |
+| --- | --- | --- |
+| 堆 Heap | 是 | 对象实例、数组，GC 主要区域 |
+| 虚拟机栈 | 否 | 栈帧、局部变量、方法调用 |
+| 程序计数器 | 否 | 当前线程执行位置 |
+| 本地方法栈 | 否 | Native 方法调用 |
+| 元空间 Metaspace | 是 | 类元数据、常量池 |
 
-避免将文件直接放在 Spring Boot 本地目录。
+`StackOverflowError` 常由过深递归导致；`OutOfMemoryError` 需结合错误类型判断是堆、元空间还是直接内存不足。
 
----
-
-## 46. 单元测试【中优先级】
-
-常用：
-
-```text
-JUnit
-Mockito
-@SpringBootTest
-```
-
-测试：
-
-- Service。
-- Mapper。
-- Controller。
-- Redis。
-- 关键业务边界。
-
----
-
-# 高频面试速答
-
-## 47. IOC 和 DI 区别
-
-- IOC：对象管理权交给 Spring。
-- DI：Spring 把依赖对象注入 Bean。
-
-## 48. `@Component` 和 `@Bean`
-
-- `@Component`：标在类上，通过组件扫描注册。
-- `@Bean`：标在方法上，适合第三方类或自定义创建过程。
-
-## 49. `@Controller` 和 `@RestController`
+### 2. 对象创建过程？
 
 ```text
-@RestController = @Controller + @ResponseBody
+类加载检查 → 分配内存 → 默认零值 → 设置对象头 → 执行构造方法
 ```
 
-## 50. Filter 和 Interceptor
+对象通常在堆上分配；JIT 逃逸分析后，短生命周期对象可能被栈上分配或标量替换。
+
+### 3. 类加载过程与双亲委派？
 
 ```text
-Filter：Servlet 层
-Interceptor：Spring MVC 层
+加载 → 验证 → 准备 → 解析 → 初始化
 ```
 
-Filter 更靠前，Interceptor 更容易获取 Controller 信息。
+双亲委派：类加载器先委托父加载器加载，父无法加载再自己加载。好处是避免同一类重复加载，并保护 `java.lang.String` 等核心类。
 
-## 51. Interceptor 和 AOP
+### 4. 哪些对象能作为 GC Root？
+
+- 虚拟机栈中引用的对象。
+- 静态变量引用的对象。
+- 常量引用的对象。
+- JNI 引用的对象。
+- 正在运行线程、同步锁持有的对象。
+
+GC 通过可达性分析判断对象是否可回收，不再使用引用计数法（无法解决循环引用）。
+
+### 5. 常见垃圾收集器？
+
+- Serial：单线程，适合小内存客户端。
+- Parallel：吞吐量优先。
+- CMS：低停顿旧方案，已逐步淘汰。
+- G1：面向服务端大堆内存，可预测停顿，JDK 9+ 默认。
+
+面试不必死记参数：重点是吞吐量与停顿时间的权衡。
+
+### 6. Minor GC、Major GC、Full GC？
+
+- Minor/Young GC：回收新生代，频繁但通常快。
+- Major/Old GC：主要回收老年代，术语在不同 JVM 中不完全统一。
+- Full GC：回收整个堆及可能的元空间，停顿通常最长，应重点关注。
+
+### 7. JVM 调优基本步骤？
 
 ```text
-Interceptor：HTTP / Controller 请求
-AOP：Spring Bean 方法
+监控告警 → 定位（日志/jstat/jmap/jstack）→ 导出堆转储
+→ 分析大对象与引用链 → 修复代码或调整参数 → 压测验证
 ```
 
-## 52. AOP 为什么能无侵入增强
+常用参数：`-Xms`、`-Xmx`、`-Xlog:gc*`（JDK 9+）。不要没有监控就盲目调大堆内存。
 
-```text
-调用者 → Proxy → 增强逻辑 → Target
-```
+### 8. 常见内存泄漏场景？
 
-业务类本身无需重复写公共逻辑。
+- 静态集合持续添加对象。
+- 缓存没有过期/淘汰策略。
+- ThreadLocal 未清理。
+- 连接、流、线程池未关闭。
+- 监听器、回调持有对象引用。
 
-## 53. `@Transactional` 为什么会失效
+项目中 Redis 缓存需设置合理 TTL；线程上下文在请求结束时清理。
 
-核心原因之一：**没有经过 Spring 代理**，典型是同类内部调用。
+## 六、一分钟项目总结
 
-## 54. Redis 为什么快
-
-- 数据主要在内存。
-- 高效数据结构。
-- 命令执行模型简单。
-- 减少磁盘随机 IO。
-
-## 55. Redis 和 MySQL 如何保证一致性
-
-常用：
-
-```text
-更新数据库 → 删除缓存
-```
-
-高一致性场景可结合 MQ、CDC 等方案。
-
-## 56. 为什么 JWT 不用 Session
-
-JWT：无状态、多实例部署简单、适合前后端分离。
-Session：服务端保存状态，多实例需要共享 Session 或粘性会话。
-
-## 57. 为什么使用 DTO / VO
-
-- DTO 控制输入字段。
-- VO 控制输出字段。
-- Entity 不直接暴露给外部。
-- 降低接口与数据库结构耦合。
-
-## 58. 为什么 Service 层需要事务
-
-Service 通常代表完整业务操作，例如：
-
-```text
-创建订单 + 写订单明细 + 扣库存
-```
-
-任一步失败都应整体回滚。
-
-## 59. MyBatis `#{}` 为什么防 SQL 注入
-
-使用 PreparedStatement 参数绑定，使 SQL 结构与参数值分离。
-
-## 60. 什么是幂等
-
-同一个业务请求重复执行多次，最终结果与执行一次一致。
-
-## 61. Kafka 为什么能削峰
-
-```text
-大量请求 → Kafka → 消费者按处理能力持续消费
-```
-
-避免瞬时流量直接冲击数据库和下游系统。
-
----
-
-# 项目升级优先级
-
-```text
-第一梯队：
-Kafka / RabbitMQ
-Redis 分布式锁
-Spring Security
-Docker
-Nginx
-
-第二梯队：
-Spring AI + RAG
-Elasticsearch
-接口限流
-Actuator + Prometheus + Grafana
-
-第三梯队：
-Spring Cloud 微服务
-分布式事务
-链路追踪
-Kubernetes
-```
-
-## 推荐升级组合
-
-```text
-Spring Boot
-+ MyBatis
-+ MySQL
-+ Redis
-+ JWT / Spring Security
-+ Kafka
-+ Redisson
-+ WebSocket
-+ Spring AI
-+ Elasticsearch
-+ Docker
-+ Nginx
-```
-
-## 可形成的项目亮点
-
-```text
-1. Redis 缓存热点菜品，数据库更新后删除缓存。
-2. Redisson 分布式锁防重复下单和多实例任务重复执行。
-3. Kafka 将订单通知、运营统计等非核心逻辑异步化。
-4. Spring Security + JWT 实现认证和角色权限控制。
-5. Elasticsearch 实现菜品全文检索。
-6. Spring AI + RAG 实现菜单问答 / 智能客服。
-7. WebSocket 实现新订单实时推送。
-8. Docker + Nginx 实现容器化部署和反向代理。
-9. Actuator + Prometheus + Grafana 实现服务监控。
-```
+这是一个 Spring Boot 外卖系统后端，使用 MyBatis 与 MySQL 管理核心业务数据，Redis 缓存热点数据。用户通过 JWT 认证，拦截器解析身份并用 ThreadLocal 传递当前用户；AOP 统一填充审计字段。订单、订单明细和购物车操作通过事务保证一致性，PageHelper 负责分页。为处理并发下单，按用户使用 Redis 分布式锁；订单提交后通过 Kafka 异步统计，并通过 RabbitMQ 延迟消息取消超时未支付订单。WebSocket 用于向管理端实时推送新订单提醒。
